syntax = "proto3";

option go_package = "github.com/townsag/reed/document_service/api/v1";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
package v1;

service DocumentService {
    rpc CreateDocument (CreateDocumentRequest) returns (CreateDocumentReply) {}
    rpc GetDocument (GetDocumentRequest) returns (GetDocumentReply) {}
    rpc UpdateDocument (UpdateDocumentRequest) returns (google.protobuf.Empty) {}
    rpc DeleteDocument (DeleteDocumentRequest) returns (google.protobuf.Empty) {}

    rpc ListDocumentsByPrincipal (ListDocumentByPrincipalRequest) returns (ListDocumentsByPrincipalReply) {}
    // this is meant to be an inexpensive rpc for authentication
    rpc GetPermissionsOfPrincipalOnDocument(GetPermissionsRequest) returns (GetPermissionsReply) {}
    // this is meant to be a more expensive rpc for showing information to the user and not authentication
    rpc ListPermissionsOnDocument(ListPermissionsOnDocumentRequest) returns (ListPermissionsOnDocumentReply) {}

    rpc CreateGuest(CreateGuestRequest) returns (CreateGuestReply) {}
    rpc UpsertPermissionUser(UpsertPermissionUserRequest) returns (google.protobuf.Empty) {}
    rpc UpdatePermissionGuest(UpdatePermissionGuestRequest) returns (google.protobuf.Empty) {}
    rpc DeletePermissionsPrincipal (DeletePermissionsPrincipalRequest) returns (google.protobuf.Empty) {}
}

message Document {
    string document_id = 1;
    optional string document_name = 2;
    optional string description = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp last_modified_at = 5;
}

message Cursor {
    // reserved 1;
    // reserved "sort_field";
    SortField sort_field = 1;
    optional string last_seen_value = 2;
    optional string last_seen_document_id = 3;
    
    enum SortField {
        SORT_FIELD_CREATED_AT = 0;
        SORT_FIELD_LAST_MODIFIED_AT = 1;
    }
}

enum Permission {
    PERMISSION_VIEWER = 0;
    PERMISSION_EDITOR = 1;
    PERMISSION_OWNER = 2;
}

message Recipient {
    oneof recipient_type {
        int32 user_id = 1;
        string principal_id = 2;
    }
}

message CreateDocumentRequest {
    string owner_user_id = 1;
    optional string document_name = 2;
    optional string document_description = 3;
}

message CreateDocumentReply {
    string document_id = 1;
}

message GetDocumentRequest {
    string document_id = 1;
}

message GetDocumentReply {
    Document document = 1;
}

message UpdateDocumentRequest {
    string document_id = 1;
    // string user_id = 2;
    optional string name = 3;
    optional string description = 4;
}

message DeleteDocumentRequest {
    string document_id = 1;
    string user_id = 2;
}


message ListDocumentByPrincipalRequest {
    Recipient recipient = 1;
    repeated Permission permission_filter = 2;
    // ^these are the permission levels for which you want to see documents that the given 
    // principal has access to
    optional Cursor cursor = 3;
    // ^the cursor encapsulated sorting information and offset information
    optional int32 page_size = 4;
}

// this leads me to believe that streaming responses are not the best approach for
// simple crud apis: https://grpc.io/docs/guides/performance/
// use repeated fields instead: https://protobuf.dev/programming-guides/proto3/#field-labels
message ListDocumentsByPrincipalReply {
    repeated DocumentPermission document_permissions = 1;
    Cursor cursor = 2;

    message DocumentPermission {
        Document document = 1;
        Permission permission = 2;
    }
}

message GetPermissionsRequest {
    string document_id = 1;
    int32 user_id = 2;
}

message GetPermissionsReply {
    Permission permission = 1;
}

// TODO: this request message pair should have cursor information because
// the number of permissions on a document is unbounded
message ListPermissionsOnDocumentRequest {
    string document_id = 1;
}

message ListPermissionsOnDocumentReply {
    repeated RecipientPermission recipient_permissions = 1;

    message RecipientPermission {
        Recipient recipient = 1;
        Permission Permission = 2;
        google.protobuf.Timestamp created_at = 3;
        google.protobuf.Timestamp last_modified_at = 4;
    }
}

message CreateGuestRequest {
    string document_id = 1;
    int32 user_id = 2;
    // ^user that created the Guest
    Permission permission = 3;
}

message CreateGuestReply {
    string guest_id = 1;
}

message UpsertPermissionUserRequest {
    int32 user_id = 1;
    string document_id = 2;
    Permission permission = 3;
}

message UpdatePermissionGuestRequest {
    string guest_id = 1;
    // guests can only have permissions on one document so we don't want to 
    // take a document id here, or we would have to validate it against the document
    // id in the database. Taking a document id here gives the impression to the 
    // calling code that they can associate the guest with arbitrary documents
    Permission permission = 3;
}

message DeletePermissionsPrincipalRequest {
    Recipient recipient = 1;
    string document_id = 2;
}